add chenges for new api versiongit add .

--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationPut.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "api-version": "2021-02-01-preview",
+    "api-version": "2021-05-01-preview",
     "subscriptionId": "subId",
     "resourceGroupName": "rg1",
     "configurationName": "myTestSecurityConfig",
@@ -9,7 +9,10 @@
       "properties": {
         "description": "A sample policy",
         "securityType": "AdminPolicy",
-        "deleteExistingNSGs": "True"
+        "deleteExistingNSGs": "True",
+        "applyOnNetworkIntentPolicyBasedServices": [
+          "None"
+        ]
       }
     }
   },
@@ -32,7 +35,10 @@
           "description": "A sample policy",
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
-          "deleteExistingNSGs": "True"
+          "deleteExistingNSGs": "True",
+          "applyOnNetworkIntentPolicyBasedServices": [
+            "None"
+          ]
         }
       }
     },
@@ -54,7 +60,10 @@
           "description": "A sample policy",
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
-          "deleteExistingNSGs": "True"
+          "deleteExistingNSGs": "True",
+          "applyOnNetworkIntentPolicyBasedServices": [
+            "None"
+          ]
         }
       }
     }
