--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerActiveConfiguration.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/networkManagerActiveConfiguration.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "NetworkManagerActiveConfiguration",
     "description": "The Microsoft Azure Network Manager Active Configuration API provides a RESTful set of web services that interact with Microsoft Azure Network Manager service to list all active configuration by network manager.",
-    "version": "2021-02-01-preview"
+    "version": "2021-05-01-preview"
   },
   "host": "management.azure.com",
   "schemes": [
@@ -196,6 +196,7 @@
   },
   "definitions": {
     "ActiveConfigurationParameter": {
+      "type": "object",
       "properties": {
         "regions": {
           "type": "array",
