--- a/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationGet.json
+++ b/specification/network/resource-manager/Microsoft.Network/preview/2021-05-01-preview/examples/NetworkManagerSecurityAdminConfigurationGet.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "api-version": "2021-02-01-preview",
+    "api-version": "2021-05-01-preview",
     "subscriptionId": "subId",
     "resourceGroupName": "rg1",
     "networkManagerName": "testNetworkManager",
@@ -25,7 +25,10 @@
           "description": "A sample policy",
           "provisioningState": "Succeeded",
           "securityType": "AdminPolicy",
-          "deleteExistingNSGs": "True"
+          "deleteExistingNSGs": "True",
+          "applyOnNetworkIntentPolicyBasedServices": [
+            "None"
+          ]
         }
       }
     }
