--- a/specification/guestconfiguration/resource-manager/Microsoft.GuestConfiguration/stable/2020-06-25/guestconfiguration.json
+++ b/specification/guestconfiguration/resource-manager/Microsoft.GuestConfiguration/stable/2020-06-25/guestconfiguration.json
@@ -968,7 +968,7 @@
       "properties": {
         "configurationMode": {
           "type": "string",
-          "readOnly": true,
+          "readOnly": false,
           "description": "Specifies how the LCM(Local Configuration Manager) actually applies the configuration to the target nodes. Possible values are ApplyOnly, ApplyAndMonitor, and ApplyAndAutoCorrect.",
           "x-ms-enum": {
             "name": "configurationMode",
@@ -1254,7 +1254,7 @@
           "description": "Details of the assignment report.",
           "x-nullable": true
         },
-        "vmssResourceId": {
+        "VMSSResourceId": {
           "type": "string",
           "readOnly": true,
           "description": "Azure resource Id of the VMSS."
