--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementListPortalConfig.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementListPortalConfig.json
@@ -10,37 +10,44 @@
             "body": {
                 "value": [
                     {
-                        "signin": {
+                        "id": "/subscriptions/subid/resourcegroups/rg1/providers/Microsoft.ApiManagement/service/apimService1/portalconfigs/default",
+                        "type": "Microsoft.ApiManagement/service/portalconfigs",
+                        "name": "default",
+                        "properties": {
+                          "signin": {
                             "require": false
-                        },
-                        "signup": {
+                          },
+                          "signup": {
                             "enableBasicAccount": true,
                             "termsOfService": {
-                                "enabled": true,
-                                "text": "I agree to the service terms and conditions.",
-                                "requireConsent": false
+                              "enabled": true,
+                              "text": "I agree to the service terms and conditions.",
+                              "requireConsent": false
                             }
-                        },
-                        "delegation": {
+                          },
+                          "delegation": {
                             "delegateRegistration": false,
                             "delegateSubscription": false,
                             "delegationUrl": null,
                             "validationKey": null
-                        },
-                        "csp": {
+                          },
+                          "csp": {
                             "mode": "reportOnly",
                             "reportUri": "https://report.contoso.com",
                             "allowedSources": [
-                                "*.contoso.com"
+                              "*.contoso.com"
                             ]
-                        },
-                        "cors": {
+                          },
+                          "cors": {
                             "allowedOrigins": [
-                                "https://contoso.com"
+                              "https://contoso.com"
                             ]
+                          }
                         }
                     }
-                ]
+                ],
+                "count": 1,
+                "nextLink": ""
             }
         }
     }
