--- a/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementPortalConfig.json
+++ b/specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2021-12-01-preview/examples/ApiManagementPortalConfig.json
@@ -8,34 +8,39 @@
   "responses": {
     "200": {
       "body": {
-        "signin": {
-          "require": false
-        },
-        "signup": {
-          "enableBasicAccount": true,
-          "termsOfService": {
-            "enabled": true,
-            "text": "I agree to the service terms and conditions.",
-            "requireConsent": false
+        "id": "/subscriptions/subid/resourcegroups/rg1/providers/Microsoft.ApiManagement/service/apimService1/portalconfigs/default",
+        "type": "Microsoft.ApiManagement/service/portalconfigs",
+        "name": "default",
+        "properties": {
+          "signin": {
+            "require": false
+          },
+          "signup": {
+            "enableBasicAccount": true,
+            "termsOfService": {
+              "enabled": true,
+              "text": "I agree to the service terms and conditions.",
+              "requireConsent": false
+            }
+          },
+          "delegation": {
+            "delegateRegistration": false,
+            "delegateSubscription": false,
+            "delegationUrl": null,
+            "validationKey": null
+          },
+          "csp": {
+            "mode": "reportOnly",
+            "reportUri": "https://report.contoso.com",
+            "allowedSources": [
+              "*.contoso.com"
+            ]
+          },
+          "cors": {
+            "allowedOrigins": [
+              "https://contoso.com"
+            ]
           }
-        },
-        "delegation": {
-          "delegateRegistration": false,
-          "delegateSubscription": false,
-          "delegationUrl": null,
-          "validationKey": null
-        },
-        "csp": {
-          "mode": "reportOnly",
-          "reportUri": "https://report.contoso.com",
-          "allowedSources": [
-            "*.contoso.com"
-          ]
-        },
-        "cors": {
-          "allowedOrigins": [
-            "https://contoso.com"
-          ]
         }
       }
     }
