--- a/specification/guestconfiguration/resource-manager/Microsoft.GuestConfiguration/stable/2020-06-25/guestconfiguration.json
+++ b/specification/guestconfiguration/resource-manager/Microsoft.GuestConfiguration/stable/2020-06-25/guestconfiguration.json
@@ -1254,7 +1254,7 @@
           "description": "Details of the assignment report.",
           "x-nullable": true
         },
-        "VMSSResourceId": {
+        "vmssResourceId": {
           "type": "string",
           "readOnly": true,
           "description": "Azure resource Id of the VMSS."
