--- a/specification/guestconfiguration/resource-manager/Microsoft.GuestConfiguration/stable/2021-01-25/guestconfiguration.json
+++ b/specification/guestconfiguration/resource-manager/Microsoft.GuestConfiguration/stable/2021-01-25/guestconfiguration.json
@@ -1538,7 +1538,7 @@
           "description": "Details of the assignment report.",
           "x-nullable": true
         },
-        "VMSSResourceId": {
+        "vmssResourceId": {
           "type": "string",
           "readOnly": true,
           "description": "Azure resource Id of the VMSS."
